Close unclosed end tag

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="button gutter-1-2 unit xs-1 s-1 m-1-2 l-1-2">
           <div>
-            <a href="" class="btn bn-ghost">
+            <a href="" class="btn bn-ghost"><strong>Book a star cruise</strong></a>
           </div>
         </div>
       </div>
