Add css styling

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <main>
-    <img class="" src="images/earth-horizon.jpg" alt="Earth from outerspace">
+    <img class="img img-flex" src="images/earth-horizon.jpg" alt="Earth from outerspace">
     <div class="bg-transition">
-      <div class="">
+      <div class="wrapper content grid-middle grid pad- pad-b">
         <div class="gutter-1-2 unit xs-1 s-1 m-1-2 l-1-2">
           <h1 class="yotta">The Planet Earth</h1>
           <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
