Add forgotten title and adjust pad

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
+  <title>Responsive Banner</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules" rel="stylesheet">
   <link href="css/grid" rel="stylesheet">
   <link href="css/type" rel="stylesheet">
@@ -11,7 +13,7 @@
   <main>
     <img class="img img-flex" src="images/earth-horizon.jpg" alt="Earth from outerspace">
     <div class="bg-transition">
-      <div class="wrapper content grid-middle grid pad- pad-b">
+      <div class="wrapper content grid-middle grid pad-t pad-b">
         <div class="gutter-1-2 unit xs-1 s-1 m-1-2 l-1-2">
           <h1 class="yotta">The Planet Earth</h1>
           <p>An amazingly species rich, varied climate planet, the third, and only habitable, planet in the Solar System, located about 25 000 ly from the Galactic Centre.</p>
@@ -19,7 +21,7 @@
 
         <div class="button gutter-1-2 unit xs-1 s-1 m-1-2 l-1-2">
           <div>
-            <a href="" class="btn btn-ghost"><strong>Book a star cruise</strong></a>
+            <a href="#" class="btn btn-ghost"><strong>Book a star cruise</strong></a>
           </div>
         </div>
       </div>
