--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <title>Responsive Banner</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/modules" rel="stylesheet">
-  <link href="css/grid" rel="stylesheet">
-  <link href="css/type" rel="stylesheet">
-  <link href="css/main" rel="stylesheet">
+  <link href="css/modules.css" rel="stylesheet">
+  <link href="css/grid.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
   <main>
